Fix content jumping on 404 page

--- a/src/components/NotFound.scss
+++ b/src/components/NotFound.scss
@@ -1,6 +1,6 @@
 .not-found-container {
-    margin-top: 80px;
-    margin-bottom: 80px;
+    padding-top: 80px;
+    padding-bottom: 80px;
 
     .message-container {
         max-width: 414px;
